--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </nav>
 </header>
 <main>
+<section id="destaque">
+<img src="lamborghini-svj.jpg"
+alt="Lamborghini Aventador SVJ vermelho visto de frente"
+class="imagem-destaque">
+</section>
 <section id="sobre">
 <h2>Sobre o Aventador SVJ</h2>
 <p>
@@ -36,12 +41,12 @@ alt="Lamborghini Aventador SVJ vermelho visto de frente" width="600">
 <figcaption>Lamborghini Aventador SVJ em vermelho vibrante.</figcaption>
 </figure>
 </section>
+
 <section id="especificacoes">
 <h2>Especificações</h2>
 <ul>
 <li>Motor: V12 6.5L</li>
 <li>Potência: 770 cv</li>
-
 <li>0 a 100 km/h: 2,8 segundos</li>
 <li>Velocidade máxima: 350 km/h</li>
 <li>Tração: Integral</li>
